# oversync

./: .dev-plan.md  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  PROGRESS.md  README.md  build.rs  deny.toml  docker-compose.override.yml  docker-compose.yml  history.txt  oversync.example.toml  oversync.toml  release-plz.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml  release-assets.yml  release.yml  security.yml
benches/: delta.rs  transforms.rs
bugs/: embedded-fail-fast-all-pipes.md  tikv-define-table-hang.md
crates/oversync-api/: CHANGELOG.md  Cargo.toml  README.md
crates/oversync-api/src/: auth.rs  handlers.rs  lib.rs  mutations.rs  operations.rs  queries.rs  state.rs  types.rs
crates/oversync-client/: CHANGELOG.md  Cargo.toml  README.md  build.rs  openapi.json
crates/oversync-client/src/: client.rs  lib.rs  types.rs
crates/oversync-connectors/: CHANGELOG.md  Cargo.toml  README.md
crates/oversync-connectors/src/: clickhouse.rs  factory.rs  flight_sql.rs  graphql.rs  http_common.rs  http_source.rs  kafka_source.rs  lib.rs  mcp.rs  mysql.rs  postgres.rs  surrealdb_source.rs  trino.rs
crates/oversync-core/: CHANGELOG.md  Cargo.toml  README.md
crates/oversync-core/proptest-regressions/: model.txt
crates/oversync-core/src/: config.rs  error.rs  lib.rs  model.rs  surreal_url.rs  table_names.rs  traits.rs
crates/oversync-delta/: CHANGELOG.md  Cargo.toml  README.md
crates/oversync-delta/src/: engine.rs  lib.rs
crates/oversync-links/: CHANGELOG.md  Cargo.toml  README.md
crates/oversync-links/src/: lib.rs  rule.rs
crates/oversync-migrate/: Cargo.toml
crates/oversync-migrate/src/: lib.rs  runner.rs
crates/oversync-queries/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/oversync-queries/src/: lib.rs
crates/oversync-queries/surql/: manifest.toml
crates/oversync-sinks/: CHANGELOG.md  Cargo.toml  README.md
crates/oversync-sinks/src/: clickhouse_sink.rs  factory.rs  http_sink.rs  kafka.rs  lib.rs  mcp_sink.rs  mysql_sink.rs  postgres_sink.rs  stdout.rs  surrealdb_sink.rs
crates/oversync-transforms/: CHANGELOG.md  Cargo.toml  README.md
crates/oversync-transforms/src/: js.rs  lib.rs  parse.rs  steps.rs  wasm.rs
docs/: architecture.md  env-vars.md  release-0.4.2.md  release-0.4.6.md
examples/: basic_stdout.rs  custom_connector.rs  dry_run_mock.rs  embedded.rs  graphql_source.rs  http_api.rs  http_to_webhook.rs  js_transform.rs  kafka_source.rs  multi_source_kafka.rs  pg_to_pg.rs  pipes_with_transforms.rs  postgres_to_surrealdb.rs  surrealdb_source.rs
k8s/: deployment.yaml
k8s/helm/oversync/: Chart.yaml  values.yaml
sql/: migration_lock.surql
sql/migrations/: v001_schema.surql
src/: alerting.rs  config.rs  config_db.rs  config_version.rs  cycle.rs  distributed_lock.rs  dlq.rs  dry_run.rs  embedded.rs  engine.rs  lib.rs  lifecycle.rs  metrics.rs  pipe_status.rs  rate_limit.rs  recipes.rs  registry.rs  resilient_db.rs  scheduler.rs  web_ui.rs
src/credential/: mod.rs  store.rs
surql/: manifest.toml
surql/migrations/: v001_schema.surql  v002_prev_hash.surql  v003_pending_events.surql
surql/queries/config/: load_pipes.surql  load_queries.surql  load_sources.surql  read_pipes_cache.surql  read_sinks_cache.surql
surql/queries/config_version/: list_versions.surql  next_version.surql
surql/queries/credential/: create_credential.surql  list_credentials.surql  lookup_credential.surql
surql/queries/delta/: batch_upsert.surql  delete_pending.surql  delete_stale.surql  find_created.surql  find_deleted.surql  find_updated.surql  log_cycle_finish.surql  log_cycle_start.surql  next_cycle_id.surql  prep_prev_hash.surql  read_pending.surql  read_snapshot_keys_paged.surql  save_pending.surql
surql/queries/mutations/: delete_dlq_entry.surql  delete_sink.surql  lock_release.surql  lock_try_acquire.surql  update_pipe_delta.surql  update_pipe_enabled.surql  update_pipe_origin_config.surql  update_pipe_schedule.surql  update_pipe_targets.surql  update_sink_config.surql  update_source_connector.surql
surql/queries/query_config/: list_by_source.surql  update_enabled.surql  update_key_column.surql  update_query.surql
surql/queries/sink/: batch_upsert_events.surql  upsert_event.surql
surql/schema/config/: tables.surql
surql/schema/links/: tables.surql
surql/schema/plugin/: tables.surql
surql/schema/sync/: tables.surql
surql/schema/transforms/: fn.surql
tests/: api_mutation_tests.rs  clickhouse_sink_tests.rs  config_db_tests.rs  config_version_tests.rs  credential_tests.rs  cycle_e2e_tests.rs  delta_engine_tests.rs  distributed_lock_tests.rs  dlq_tests.rs  embedded_tests.rs  engine_e2e_tests.rs  engine_tests.rs  flight_sql_connector_tests.rs  full_pipeline_e2e_tests.rs  graphql_connector_tests.rs  http_sink_tests.rs  http_source_tests.rs  js_transform_tests.rs  kafka_sink_tests.rs  kafka_source_tests.rs  lifecycle_tests.rs  link_crud_tests.rs  mcp_tests.rs  migration_tests.rs  mysql_connector_tests.rs  mysql_sink_tests.rs  postgres_connector_tests.rs  postgres_metadata_recipe_tests.rs  postgres_sink_tests.rs  postgres_snapshot_recipe_tests.rs  resilience_tests.rs  resilient_db_tests.rs  routing_tests.rs  scheduler_tests.rs  snapshot_payload_repro_tests.rs  stress_chaos_test.rs  surrealdb_sink_tests.rs  surrealdb_source_tests.rs  throughput_benchmark_tests.rs  transform_tests.rs  (+1 more)
tests/common/: flight_sql.rs  kafka.rs  mod.rs  mysql.rs  postgres.rs  stack.rs  surreal.rs  trino.rs
tests/fixtures/: mock_mcp_server.py
tests/stack/: docker-compose.yml  down.sh  start.sh  wait.sh
ui/: .gitignore  README.md  eslint.config.js  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
ui/scripts/: generate-api.mjs  verify-generated-api.mjs
ui/src/: App.tsx  app.css  chart-fixes.css  index.css  main.tsx  routeTree.gen.ts
ui/src/api/: client.test.ts  client.ts  export.ts  history.ts  pipePresets.ts  pipes.ts  runtimeConfig.ts  sinks.ts  sources.ts  sync.ts
(+138 files in other folders)
