[package]
name = "oversync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A lightweight data sync engine: poll, delta, sink."
repository = "https://github.com/overrealdb/oversync"
keywords = ["data-sync", "delta", "surrealdb", "etl"]
categories = ["database", "asynchronous"]
rust-version.workspace = true
readme = "README.md"
exclude = [
	".github/",
	"tests/fixtures/",
]

[workspace]
resolver = "2"
members = [
	"crates/oversync-core",
	"crates/oversync-connectors",
	"crates/oversync-delta",
	"crates/oversync-links",
	"crates/oversync-sinks",
	"crates/oversync-api",
	"crates/oversync-transforms",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
oversync-core = { path = "crates/oversync-core" }
oversync-connectors = { path = "crates/oversync-connectors" }
oversync-delta = { path = "crates/oversync-delta" }
oversync-links = { path = "crates/oversync-links" }
oversync-sinks = { path = "crates/oversync-sinks" }
oversync-api = { path = "crates/oversync-api" }
oversync-transforms = { path = "crates/oversync-transforms" }

overshift = "0.1"
surql-parser = { version = "0.1", features = ["build"] }
surql-macros = "0.1"

axum = "0.8"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

surrealdb = { version = "3", features = ["kv-mem", "protocol-http"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.29"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
arrow = { version = "58", default-features = false, features = ["json"] }
arrow-flight = { version = "58", features = ["flight-sql-experimental"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "json"] }
rdkafka = { version = "0.37", features = ["cmake-build"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["surrealdb", "postgres", "kafka", "mysql"] }

[[bin]]
name = "oversync"
path = "bin/oversync.rs"
required-features = ["cli"]

[[example]]
name = "embedded"

[[example]]
name = "http_api"
required-features = ["api"]

[features]
default = []
schema = ["dep:overshift"]
api = ["dep:oversync-api", "dep:axum", "dep:async-trait"]
cli = [
	"api",
	"schema",
	"oversync-core/cli",
	"dep:clap",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
]
validate-docker = []

[dependencies]
oversync-core = { workspace = true }
oversync-connectors = { workspace = true }
oversync-delta = { workspace = true }
oversync-sinks = { workspace = true }
surql-macros = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
surrealdb = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# CLI-only deps (behind "cli" feature)
async-trait = { workspace = true, optional = true }
overshift = { workspace = true, optional = true }
oversync-api = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
oversync-core = { workspace = true }
oversync-connectors = { workspace = true }
oversync-delta = { workspace = true }
oversync-sinks = { workspace = true }
overshift = { workspace = true }
surql-macros = { workspace = true }
surrealdb = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rdkafka = { workspace = true }
axum = { workspace = true }
oversync-api = { workspace = true }
reqwest = { workspace = true }
tower = "0.5"
http-body-util = "0.1"
tokio-stream = "0.1"
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[build-dependencies]
surql-parser = { workspace = true }

[profile.dev.package."*"]
debug = false

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
