[package]
name = "oversync-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Server-side Axum control-plane API for oversync."
repository = "https://github.com/overrealdb/oversync"

[dependencies]
oversync-core = { workspace = true }
oversync-client = { workspace = true }
oversync-queries = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
surrealdb = { workspace = true }
async-trait = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
