[package]
name = "oversync-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Source connector implementations for oversync."

[dependencies]
oversync-core = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
serde_json = { workspace = true }
tonic = "0.14"
tracing = { workspace = true }
