[package]
name = "oversync-delta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hash-based delta detection engine for oversync."
repository = "https://github.com/overrealdb/oversync"

[dependencies]
oversync-core = { workspace = true }
surrealdb = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
