[package]
name = "oversync-delta"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hash-based delta detection engine for oversync."
repository = "https://github.com/overrealdb/oversync"

[dependencies]
oversync-core = { workspace = true }
oversync-links = { workspace = true }
oversync-queries = { workspace = true }
surrealdb = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
