[package]
name = "oversync-links"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Link resolver with WASM plugin support for oversync."
repository = "https://github.com/overrealdb/oversync"

[dependencies]
oversync-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
