[package]
name = "oversync-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SurrealDB migration runner for oversync."

[dependencies]
oversync-core = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
