[package]
name = "oversync-sinks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sink implementations for oversync."

[dependencies]
oversync-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rdkafka = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
