[package]
name = "oversync-sinks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sink implementations for oversync."
repository = "https://github.com/overrealdb/oversync"

[dependencies]
oversync-core = { workspace = true }
oversync-queries = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rdkafka = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
surrealdb = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
