[package]
name = "oversync-transforms"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Declarative transform step library for the oversync data sync engine."

[dependencies]
oversync-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
