[package]
name = "oversync-transforms"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Declarative transform step library for the oversync data sync engine."
repository = "https://github.com/overrealdb/oversync"

[dependencies]
oversync-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
regex = "1"
wasmtime = { workspace = true, optional = true }
rquickjs = { workspace = true, optional = true }
rquickjs-serde = { workspace = true, optional = true }

[features]
default = ["js"]
wasm = ["dep:wasmtime"]
js = ["dep:rquickjs", "dep:rquickjs-serde"]

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
wat = "1"
